# guardrails-ai

./: .ai-guardrails-state.yaml  .gitignore  .pre-commit-config.yaml  doctor.sh
sh/bootstrap-dev/: .ai-guardrails-state.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  ai-guardrails  infrastructure_bootstrap.py  installation-manifest.yaml  pyproject.toml  test_backup_collision.py  test_receipt_integration.py  test_system_comprehensive.py
sh/bootstrap-dev/.ai/: envelope.json  guardrails.yaml  plugin_config.yaml
sh/bootstrap-dev/.github/chatmodes/: blueprint-mode-mod.chatmode.md
sh/bootstrap-dev/.github/workflows/: ai_guardrails_on_commit.yaml  ai_guardrails_on_commit.yml
sh/bootstrap-dev/ai/scripts/: lang_lint.sh
sh/bootstrap-dev/archives/: install.old
sh/bootstrap-dev/demos-on-rails-kit.old/: .pre-commit-config.yaml  DEMO_GUIDE.md  plugin-manifest.yaml
sh/bootstrap-dev/demos-on-rails-kit.old/.github/: pull_request_template.md
sh/bootstrap-dev/demos-on-rails-kit.old/scripts/: check_demo_on_rails.py
sh/bootstrap-dev/demos-on-rails-kit.old/tools/: demo_harness.py
sh/bootstrap-dev/demos-on-rails-kit/.ai/: guardrails.demos-on-rails.example.yaml
sh/bootstrap-dev/development/: bootstrap-config.yaml  bootstrap_manager.py  plugin_system.py
sh/bootstrap-dev/development/deprecated/: ai_guardrails_bootstrap_enhanced.sh  ai_guardrails_bootstrap_modular.sh  ai_guardrails_bootstrap_unified.sh
sh/bootstrap-dev/docs/: DEVELOPMENT.md  QUICK-START.md  README.md  plugin-system-architecture.md
sh/bootstrap-dev/docs/architecture/: CANONICAL_PLUGIN_DEVELOPMENT_GUIDE.md  (+2 more)
sh/bootstrap-dev/patches/: manifest-paths-consolidation.patch
sh/bootstrap-dev/scripts/: analyze_hook_ordering.py  standardize_plugins.py  validate_plugin_manifests.py
sh/bootstrap-dev/src/: ai_guardrails_bootstrap_modular.sh  installation-manifest.yaml  target-structure.schema.yaml
sh/bootstrap-dev/test-demo/: .pre-commit-config.yaml  .pre-commit-config.yaml.example
sh/bootstrap-dev/tests/: ai_guardrails_bootstrap.sh  ai_guardrails_bootstrap_modular.sh  run_all_tests.sh  test_bootstrap_architecture.py  test_bootstrap_modular.sh  test_integration.sh  test_integration_2_1.py  test_integration_2_2.py  test_integration_2_3.py  test_integration_2_4.py  test_network_scenarios.sh  test_phase2_plugin_architecture.py
(+222 files in other folders)
